# active-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
activelearning/: AL_cycle.py  AL_selection.py
activelearning/queries/bayesian/: mc_bald.py  mc_max_entropy.py  mc_max_meanstd.py  mc_max_varratios.py
activelearning/queries/informative/: entropy_query_stream.py  margin_query_stream.py  uncertainty_query_stream.py
activelearning/queries/representative/: coreset_query.py  coreset_query_stream.py  density_query.py  diversity_query.py  diversity_query_stream.py  kmeans_query.py  probcover_query.py  probcover_query_stream.py  random_query.py  random_query_stream.py
activelearning/utils/: AL_utils.py  VAE.py  skorch_nnet.py
examples/: 1_iris.ipynb  2_MNIST.ipynb  3_bayesian_queries.ipynb  4_streambased_scenario.ipynb  5_sample_selection.ipynb
tests/: test_AL_utils.py  test_classifiers.py  test_main_functions.py  test_queries.py  test_query_utils.py
